# maestro

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  architecture.md  components.json  devbox.json  eslint.config.js  lefthook.yml  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.github/: release-please-config.json
.github/workflows/: ci.yml  homebrew.yml  release-please.yml  release.yml
assets/: maestro-skill.md
assets/skills/: brainstorming.md  systematic-debugging.md
assets/status-prompts/: code-review.md  implementation-planning.md  tdd.md  verification.md
cli/: Cargo.toml
cli/src/: ipc.rs  main.rs
cli/src/commands/: artifact.rs  get_artifacts.rs  get_card.rs  get_parent.rs  log.rs  mod.rs  question.rs  resolve_question.rs  status.rs
plan/: 00-overview.md  browser-access-architecture.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-17.md  phase-18.md  phase-19.md  phase-20.md  phase-21.md  phase-22.md
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  artifacts.rs  cards.rs  config.rs  conversations.rs  directories.rs  ipc.rs  mod.rs  projects.rs  questions.rs  review.rs  statuses.rs  worktrees.rs
src-tauri/src/config/: global.rs  mod.rs  resolution.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  schema.sql
src-tauri/src/events/: bus.rs  mod.rs
src-tauri/src/executor/: context.rs  lifecycle.rs  mod.rs  monitor.rs  reattach.rs  spawn.rs  stream.rs  tool_parser.rs
src-tauri/src/fs/: artifacts.rs  diff.rs  git.rs  mod.rs  worktrees.rs
src-tauri/src/http/: auth.rs  error.rs  mod.rs  routes.rs  server.rs  websocket.rs
src-tauri/src/ipc/: handler.rs  protocol.rs  server.rs
src/lib/: utils.ts
src/lib/components/: connection-status.svelte  project-switcher.svelte  status-badge.svelte  status-manager.svelte
src/lib/focus/: context.test.ts  context.ts  focusable.ts  index.ts  keys.test.ts  keys.ts  region.svelte  types.ts
src/lib/services/: agent-ws.ts  agent.ts  artifacts.ts  cards.ts  config.ts  conversations.ts  db.ts  directories.ts  events.ts  projects.ts  questions.ts  review.ts  statuses.ts  worktrees.ts
src/lib/stores/: agent-timeline.test.ts  agent.ts  artifacts.ts  (+13 more)
src/routes/: +layout.svelte  +page.svelte
(+108 files in other folders)
