[package]
name = "maestro-cli"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "maestro-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "macros"] }
