[package]
name = "maestro"
version = "0.0.1"
edition = "2021"

[lib]
name = "maestro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "maestro"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
