[package]
name = "maestro"
version = "0.0.1"
edition = "2021"

[lib]
name = "maestro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "maestro"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "net", "rt", "macros"] }
libc = "0.2"
toml = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
